--- a/hu_citrix_7x.adoc
+++ b/hu_citrix_7x.adoc
@@ -46,7 +46,7 @@ size=80G features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_hand
 | |- 12:0:5:0  sdn   8:208   active ready running
 | |- 2:0:6:0   sdg   8:96    active ready running
 | `- 12:0:0:0  sdi   8:128   active ready running
-`-+-`policy='service-time 0' prio=10 status=enabled
+|-+- policy='service-time 0' prio=10 status=enabled
   |- 2:0:0:0   sda   8:0     active ready running
   |- 2:0:1:0   sdb   8:16    active ready running
   |- 12:0:3:0  sd1   8:176   active ready running
