--- a/hu_ol_85.adoc
+++ b/hu_ol_85.adoc
@@ -46,7 +46,7 @@ size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=
 |-+- policy='service-time 0' prio=50 status=active
 | |- 16:0:6:35 sdwb 69:624 active ready running
 | |- 16:0:5:35 sdun 66:752 active ready running
-`-+- policy='service-time 0' prio=10 status=enabled
+|-+- policy='service-time 0' prio=10 status=enabled
 |- 15:0:0:35 sdaj 66:48 active ready running
 |- 15:0:1:35 sdbx 68:176 active ready running
 ----
@@ -59,11 +59,11 @@ include::_include/hu/reuse_hu_asa_configuration.adoc[]
 # multipath -ll
 3600a098038303634722b4d59646c4436 dm-28 NETAPP,LUN C-Mode
 size=80G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
-`-+- policy='service-time 0' prio=50 status=active
+|-+- policy='service-time 0' prio=50 status=active
   |- 11:0:7:6   sdbz 68:208  active ready running
   |- 11:0:11:6  sddn 71:80   active ready running
   |- 11:0:15:6  sdfb 129:208 active ready running
-  `- 12:0:1:6   sdgp 132:80  active ready running
+  |- 12:0:1:6   sdgp 132:80  active ready running
 ----
 
 NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
@@ -130,5 +130,3 @@ You can use the recommended settings to configure Kernel-based Virtual Machine (
 There are no known issues for Oracle Linux 8.5.
 
 NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu_rhel_85.html#known-problems-and-limitations[known issues] section in the corresponding Red Hat Enterprise Linux release documentation.
-
-// 2022-04-26, updated for 8.5
