--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu_aix_61_rn.html
 keywords: host utilities, aix, 6.1 netapp, ontap
-summary: Release Notes for Linux Unified Host Utilities 6.1
+summary: Release Notes for AIX Host Utilities 6.1
 ---
 
 = AIX Host Utilities 6.1 Release Notes
