--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -164,9 +164,51 @@ Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The
 
 By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
 
-== AIX host behavior
+== Required settings to support AIX with SMBC
 
-Beginning in ONTAP 9.11.1, AIX hosts configured with SnapMirror Business Continuity (SMBC) LUNs only discover paths from the primary cluster after the LUN map. The LUN paths from the secondary cluster will return a `LU_NOT_SUPPORTED SCSI` response during LUN discovery. This means that the secondary cluster LUN paths will not be visible to the host. This target side response also results in the following behavioural changes on the host:
+Beginning in ONTAP 9.11.1, AIX is supported with SnapMirror Business Continuity (SMBC). The following settings are required in ONTAP and the AIX storage stack to support AIX with SMBC.
+
+=== ONTAP Settings
+
+If storage failover (SFO) occurs on both clusters around the same time (concurrent SFO), I/O is expected to fail because the primary path of the LUN might return `LU NOT SUPPORTED`. To avoid I/O failure, you must set the following bootarg on all 4 nodes of both clusters:
+
+`bootarg.scsit.zrto_consensus_debounce_time_limit to 600s`
+
+.Steps
+
+. Use the following command to set the bootarg. The command must be run on all four nodes in the source and destination clusters :
++
+`system node run -node _node name_ -command "bootargs set bootarg.scsit.zrto_consensus_debounce_time_limit 60000000”`
+
+. Verify the bootarg is set correctly:
++
+`system node run -node _node name_ -command "bootargs get bootarg.scsit.zrto_consensus_debounce_time_limit”`
+
+. Use one of the following options to activate the bootarg:
++
+.. Log in to the clustershell of the cluster by using the diagnostic login and run the following command:
++
+`sudo sysctl sysvar.scsit.bootargs.rescan=true`
++
+.. Alternatively you can perform a storage failover on both of the clusters to activate the bootarg.
++
+For example  if "cluster 1" consists of Node 1, Node 2, Node 3 and Node 4, the following steps must be performed sequentially:
++
+... Storage failover takeover of Node 1 by Node 2.
+... Storage failover giveback of Node 1 by Node 2.
+... Storage failover takeover of Node 2 by Node 1.
+... Storage failover giveback of Node 2 by Node 1.
++
+The above example shows the steps for Node 1 and Node 2 on "cluster 1". This must be followed by:
++
+... Storage failover takeover of Node 3 by Node 4.
+... Storage failover giveback of Node 3 by Node 4.
+... Storage failover takeover of Node 4 by Node 3.
+... Storage failover giveback of Node 4 by Node 3.
+
+=== AIX host behavior
+
+Beginning in ONTAP 9.11.1, AIX hosts configured with SMBC LUNs only discover paths from the primary cluster after the LUN map. The LUN paths from the secondary cluster will return a `LU_NOT_SUPPORTED SCSI` response during LUN discovery. This means that the secondary cluster LUN paths will not be visible to the host. This target side response also results in the following behavioral changes on the host:
 
 . A planned failover (PFO) or automatic unplanned failover (AUFO) event results in the loss of all LUN paths and application I/O failure. You must perform a manual AIX host rescan to discover the paths from the new primary cluster.
 
@@ -221,7 +263,7 @@ hdisk3  6        Enabled  Sel,Opt      fscsi7  2024d039ea1ee6a8,1000000000000
 hdisk3  7        Enabled  Sel,Opt      fscsi7  2026d039ea1ee6a8,1000000000000
 ----
 
-. Remove the failed paths from the remote cluster for all devices:
+. Remove the failed paths from the primary cluster for all devices:
 +
 *Example*
 +
