--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -36,7 +36,7 @@ The Release Notes are updated between product releases as new information is ava
 
 == Known Problems and Limitations
 
-There are no known issue for the HPUX 6.0 release.
+There are no known issues for the HPUX 6.0 release.
 
 == About SAN Host Configuration documentation
 
