--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -40,7 +40,7 @@ There are no known issues for the HPUX 6.0 release.
 
 == About SAN Host Configuration documentation
 
-Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation.] The ONTAP SAN HOST configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
+Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation.] The ONTAP SAN Host configuration documentation is cumulative, covering all current SAN Host releases. Any functional differences across releases are noted in context.
 
 == Where to find product documentation and other information
 
