--- a/hu_hpux_60_rn.adoc
+++ b/hu_hpux_60_rn.adoc
@@ -29,7 +29,7 @@ NOTE: To make it immediately clear which environment is being used, this documen
 
 == HPUX Host Utilities 6.0 enhancements
 
-The Release Notes are updated between product releases as new information is available.
+The Release Notes are updated between product releases as new information is available. The HPUX Host Utilities 6.0 continues to support versions of the following:
 
 * HP-UX 11iv2
 * HP-UX 11iv3
