--- a/hu_rhel_84.adoc
+++ b/hu_rhel_84.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no know issues for RHEL 8.4.
+There are no known issues for RHEL 8.4.
 
 == Release Notes
 
