--- a/hu_rhel_90.adoc
+++ b/hu_rhel_90.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no know issues for RHEL 9.0.
+There are no known issues for RHEL 9.0.
 
 == Release Notes
 
