--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -164,136 +164,13 @@ Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The
 
 By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
 
-== Required settings to support AIX with SMBC
+== AIX support with SM-BC
 
-Beginning in ONTAP 9.11.1, AIX is supported with SnapMirror Business Continuity (SMBC). The following settings are required in ONTAP and the AIX storage stack to support AIX with SMBC.
+Beginning with ONTAP 9.11.1, AIX is supported with SM-BC. With an AIX configuration, the primary cluster is the "active" cluster.
 
-=== ONTAP Settings
+In an AIX configuration, failovers are disruptive. With each failover, you will need to perform a re-scan on the host for I/O operations to resume.
 
-If a storage failover (SFO) event occurs on both clusters around the same time (concurrent SFO), I/O is expected to fail because the primary path of the LUN might return `LU NOT SUPPORTED`. To avoid I/O failure, you must set the following bootarg on all 4 nodes of both clusters:
-
-`bootarg.scsit.zrto_consensus_debounce_time_limit to 600s`
-
-.Steps
-
-. Use the following command to set the bootarg. The command must be run on all four nodes in the source and destination clusters :
-+
-`system node run -node _node name_ -command "bootargs set bootarg.scsit.zrto_consensus_debounce_time_limit 60000000”`
-
-. Verify the bootarg is set correctly:
-+
-`system node run -node _node name_ -command "bootargs get bootarg.scsit.zrto_consensus_debounce_time_limit”`
-
-. Use one of the following options to activate the bootarg:
-+
-.. Log in to the clustershell of the cluster by using the diagnostic login and run the following command:
-+
-`sudo sysctl sysvar.scsit.bootargs.rescan=true`
-+
-.. Alternatively, you can perform a storage failover on both of the clusters to activate the bootarg.
-+
-For example  if "cluster 1" consists of Node 1, Node 2, Node 3 and Node 4, the following steps must be performed sequentially:
-+
-... Storage failover takeover of Node 1 by Node 2.
-... Storage failover giveback of Node 1 by Node 2.
-... Storage failover takeover of Node 2 by Node 1.
-... Storage failover giveback of Node 2 by Node 1.
-+
-The above example shows the steps for Node 1 and Node 2 on "cluster 1". This must be followed by:
-+
-... Storage failover takeover of Node 3 by Node 4.
-... Storage failover giveback of Node 3 by Node 4.
-... Storage failover takeover of Node 4 by Node 3.
-... Storage failover giveback of Node 4 by Node 3.
-
-=== AIX host behavior
-
-Beginning in ONTAP 9.11.1, AIX hosts configured with SMBC LUNs only discover paths from the primary cluster after the LUN map. The LUN paths from the secondary cluster will return a `LU_NOT_SUPPORTED SCSI` response during LUN discovery. This means that the secondary cluster LUN paths will not be visible to the host. This target side response also results in the following behavioral changes on the host:
-
-. A planned failover (PFO) or automatic unplanned failover (AUFO) event results in the loss of all LUN paths and application I/O failure. You must perform a manual AIX host rescan to discover the paths from the new primary cluster.
-
-. During concurrent storage failover operations (SFO) on both the primary and secondary clusters, applications might experience I/O outage. To resolve this, a manual host rescan might be required.
-
-The following example displays the LUN path status on AIX host during steady state. Only the primary cluster paths are displayed:
-
-*Example*
-
-----
-#lsmpio -l hdiskx
-
-[root@aix_server /]: lsmpio -l hdisk3
-name    path_id  status   path_status  parent  connection
-
-hdisk3  4        Enabled  Sel,Opt      fscsi6  2023d039ea1ee6a8,1000000000000
-hdisk3  5        Enabled  Sel,Opt      fscsi6  2025d039ea1ee6a8,1000000000000
-hdisk3  6        Enabled  Sel,Opt      fscsi7  2024d039ea1ee6a8,1000000000000
-hdisk3  7        Enabled  Sel,Opt      fscsi7  2026d039ea1ee6a8,1000000000000
-----
-
-=== AIX host remediation after a PFO or AUFO event
-
-.About this task
-
-The AIX storage stack does not perform an automatic rescan of the LUNS after the LUN state changes from `LU_NOT_SUPPORTED` to `SCSI_GOOD`.  After a PFO or AUFO event, you must perform the following AIX host remediation steps to discover the LUN paths from the new primary cluster.
-
-.Steps
-
-. Perform a rescan for new ONTAP devices:
-`#cfgmgr`
-
-. Check the multipathing status on each ONTAP device:
-+
-In the following example, `hdisk3 0` to `hdisk3 3` shows the old primary cluster paths in a failed state.`hdisk3 4` to `hdisk3 7` shows the new primary cluster paths.
-+
-*Example*
-+
-----
-#lsmpio -l hdiskx
-
-[root@aix_server /]: lsmpio -l hdisk3
-name    path_id  status   path_status  parent  connection
-
-hdisk3  0        Failed   Opt,Fai      fscsi6  2005d039ea1e44e4,1000000000000
-hdisk3  1        Failed   Opt,Fai      fscsi6  2003d039ea1e44e4,1000000000000
-hdisk3  2        Failed   Opt,Fai      fscsi7  2006d039ea1e44e4,1000000000000
-hdisk3  3        Failed   Opt,Fai      fscsi7  2004d039ea1e44e4,1000000000000
-hdisk3  4        Enabled  Sel,Opt      fscsi6  2023d039ea1ee6a8,1000000000000
-hdisk3  5        Enabled  Sel,Opt      fscsi6  2025d039ea1ee6a8,1000000000000
-hdisk3  6        Enabled  Sel,Opt      fscsi7  2024d039ea1ee6a8,1000000000000
-hdisk3  7        Enabled  Sel,Opt      fscsi7  2026d039ea1ee6a8,1000000000000
-----
-
-. Remove the failed paths from the old primary cluster for all devices:
-+
-*Example*
-+
-----
-#rmpath [-l _name_] [-p _parentname_] [-w _connectionlocation_] [-i_ pathID_] [-d] [-g]
-
-[root@aix_server /]: rmpath -l hdisk3  -p fscsi6 -w 2005d039ea1e44e4,1000000000000 -i 0  -d
-path Deleted
-[root@aix_server /]: rmpath -l hdisk3  -p fscsi6 -w 2003d039ea1e44e4,1000000000000 -i 1  -d
-path Deleted
-[root@aix_server /]: rmpath -l hdisk3  -p fscsi7 -w 2006d039ea1e44e4,1000000000000 -i 2  -d
-path Deleted
-[root@aix_server /]: rmpath -l hdisk3  -p fscsi7 -w 2004d039ea1e44e4,1000000000000 -i 3  -d
-path Deleted
-----
-
-. Verify the path status:
-+
-*Example*
-+
-----
-[root@aix_server /]: lsmpio -l hdisk3
-name    path_id  status   path_status  parent  connection
-
-hdisk3  4        Enabled  Sel,Opt      fscsi6  2023d039ea1ee6a8,1000000000000
-hdisk3  5        Enabled  Sel,Opt      fscsi6  2025d039ea1ee6a8,1000000000000
-hdisk3  6        Enabled  Sel,Opt      fscsi7  2024d039ea1ee6a8,1000000000000
-hdisk3  7        Enabled  Sel,Opt      fscsi7  2026d039ea1ee6a8,1000000000000
-[root@aix_server /]:
-----
+To configure AIX for SM-BC, refer to the Knowledge Base article link:https://kb.netapp.com/Advice_and_Troubleshooting/Data_Protection_and_Security/SnapMirror/How_to_configure_an_AIX_host_for_SnapMirror_Business_Continuity_(SM-BC)[How to configure an AIX host for SnapMirror Business Continuity (SM-BC)]^.
 
 == Known Problems and Limitations
 
