--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -71,10 +71,10 @@ You can access documentation for all NetApp products and find other product info
 
 *Configuring and managing your ONTAP storage system*
 
-*	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide] for your version of ONTAP
-*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide] for your version of ONTAP
-*	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes] for your version of ONTAP
-* link:https://mysupport.netapp.com/site/[NetApp Interoperability Matrix]
-* link:https://hwu.netapp.com/[Hardware Universe] (formerly the System Configuration Guide)
-* link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies]
-* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities]
+*	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
+*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide^] for your version of ONTAP
+*	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
+* link:https://imt.netapp.com/matrix/#welcome[NetApp Interoperability Matrix^]
+* link:https://hwu.netapp.com/[Hardware Universe^] (formerly the System Configuration Guide)
+* link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies^]
+* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities^]
