--- a/_include/hu/reuse_hu_san_toolkit.adoc
+++ b/_include/hu/reuse_hu_san_toolkit.adoc
@@ -2,7 +2,7 @@ The toolkit is installed automatically when you install the NetApp Host Utilitie
 
 .Example
 
-In the following example, the `sanlun lun show command` returns LUN information.
+In the following example, the `sanlun lun show` command returns LUN information.
 ----
 # sanlun lun show all
 controller(7mode/E-Series)/            device     host               lun
